Fixed card wrap issue

--- a/src/stylesheets/slices/_text_cards.scss
+++ b/src/stylesheets/slices/_text_cards.scss
@@ -59,28 +59,24 @@
   }
   .card-row {
     display: flex;
+    flex-wrap: wrap;
     width: 100%;
     justify-content: space-around;
-    flex-wrap: wrap;
     text-align: center;
     padding-bottom: 60px;
     gap: 20px;
-    @media screen and (max-width: $desktop) {
-      gap: 20px;
-    }
   }
   .card {
     max-width: 374px;
-    height: 421px; // DOUBLE CHECK: was originally min height change back if breaks mobile ****
+    height: 421px;
     display: flex;
     flex-direction: column;
     align-items: center;
+    flex-wrap: wrap;
     justify-content: space-between;
-
     box-shadow: $box-shadow;
     border-radius: 5px;
     padding: 58px 23px 26px;
-
     .btn-c {
       width: 100%;
     }
@@ -99,7 +95,7 @@
   .card:nth-of-type(3n-1) {
     background: $color-blue-light;
     margin-top: 80px;
-    @media screen and (max-width: $tablet) {
+    @media screen and (max-width: $desktop) {
       margin: 0px;
     }
   }
